<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1,2,3,4"
    android:id="@+id/budgetTable">

    <TableRow
        android:id="@+id/budgetRow"
        android:background="@color/white">
        <TextView
            android:id="@+id/dataTanggal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/dataKet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/information"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/dataType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/empty"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/dataNominal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="10sp"
            android:text="@string/fund"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </TableRow>

</TableLayout>